- Don't immediately reconnect if connecting to master server times out.
- The "sit" command now also sets itemsGatherAuto to 0.
- The Linux version no longer depends on the buggy C::DynaLib.
  Instead, it now uses an XS module (generated by SWIG).
- useSelf_item_# can now be a comma-seperated list of item names. Example:
  (previous version)
  useSelf_item_0 Red Potion
  ...
  useSelf_item_1 Yellow Potion

  (now)
  useSelf_item_0 Red Potion, Yellow Potion
  ...
- dumpData() now also dumps raw data so you can see strings (just like in
  hex editors).
- Support packet 01EE (thanks to Digital Anomaly)
- Don't drop target when a monster has already attacked you, but switches
  target later. This fixes a lot of "kore walks away when being kill
  stealed" complaints.
- New regular expression for detecting GM names. This will get rid of many
  false matches. Names like "LaGMaster" don't match anymore.
- If dcOnDisconnect is set to -1, kore will not respawn nor disconnect on
  death.
- Don't autorestart while taking items.
- mon_control.txt's auto-teleport flag can now have two values:
  1 = teleport when monster's on screen
  2 = teleport when monster hits you
  Thanks to floAt.
- New feature: automatically change configuration file after an amount of time.

  New config options:
  autoConfChange, autoConfChange_files, autoConfChange_min, autoConfChange_seed
  If autoConfChange is set to 1, change configuration file after an amount
  of time.
  autoConfChange_files is a comma-seperated list of filenames. A random
  file from that list will be chosen as the new config file to load.
  time = autoConfChange_min + rand(autoConfChange_seed)

  Think of this feature as a more flexible version of timed lockMaps.
  With this feature you can not only set different lockMaps, but also
  different Kapras.
- Unless sitAuto_over_50 is set to 1 in config.txt, kore wont sit if
  you're overweight.

- Began working on splitting openkore into modules.