@@ -11,10 +11,8 @@
 
 #this is commented out because it requires additional packages, but is included here to give other mods ideas ;)
 #
-#if ($^O eq 'MSWin32' || $^O eq 'cygwin') {
-#	use Win32::Console::ANSI;
-#}
-#use Term::ANSIScreen qw/:color :cursor :screen :keyboard/;
+
+
 
 # Known domains:
 # atk			You attack monster
@@ -33,6 +31,10 @@ use Carp;
 use Utils;
 use Exporter;
 use IO::Socket;
+if ($^O eq 'MSWin32' || $^O eq 'cygwin') {
+	eval "use Win32::Console::ANSI;";
+}
+use Term::ANSIScreen qw/:color :cursor :screen :keyboard/;
 
 our @ISA = qw(Exporter);
 our @EXPORT_OK = qw(
@@ -119,33 +121,26 @@ sub processMsg {
 		# TODO: set console color here
 		# This is a small example (works only on Unix).
 		# It should be in a config file rather than hardcoded.
-		if ($^O ne 'MSWin32' && $^O ne 'cygwin') {
+		if (1 == 1) {
 			# above if statement would not be required if the Win32::Console::ANSI package was installed
 			if ($type eq "error") {
 				# Errors are red
-				print "\033[1;31m";
-# above can be replaced by
-#				color 'red'; clline;
+				color 'red';
 				} elsif ($domain eq "connection") {
 				# Magenta
-				print "\033[1;35m";
-				#color 'magenta'; clline;
+				color 'magenta';
 			} elsif ($domain eq "atk") {
 				# Cyan
-				print "\033[1;36m";
-				#color 'cyan'; clline;
+				color 'cyan';
 			}
 		}
 
 		$consoleVar->{$domain} = 1 if (!defined($consoleVar->{$domain}));
 		print $message if ($consoleVar->{$domain});
 
-		if ($^O ne 'MSWin32' && $^O ne 'cygwin') {
-			#above if not needed if Win32::Console::ANSI installed
-			# Restore normal color
-			print "\033[0m";
-			#can be replaced by 
-			#color 'reset'; clline;
+		if (1 == 1) {
+		# Restore normal color
+		color 'reset';
 			STDOUT->flush;
 		}
 	}
